# c-doctor

./: Cargo.toml  README.md
.claude/: settings.json
.claude/commands/: c-doctor.md
.claude/hooks/: c-doctor-post-edit.sh
.github/workflows/: ci.yml  release.yml
examples/: .c-doctor.toml  bad.c  good.c
rust/: Cargo.toml
rust/src/: config.rs  main.rs  reporter.rs  rules.rs  scanner.rs
src/: config.rs  main.rs  preprocess.rs  reporter.rs  rules.rs  scanner.rs  scorer.rs
