[package]
name = "c-doctor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Health diagnostics for C codebases."

[[bin]]
name = "c-doctor"
path = "src/main.rs"

[dependencies]
regex = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
